# H-W-supreme-Ai-

./: .gitignore  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FORENSIC_LEDGER_README.md  GOVERNANCE.md  INTEGRATION_FIX_SUMMARY.md  LICENSE  Makefile  OPERATIONS_REPORT.json  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  WHITE_SWAN_OS_V3_5_ARCHITECTURE_GUIDE.md  WOS-EVID-ART-001.py  adversarial_standalone.py  adversarial_test.py  app.js  app_v35.py  art_tornado_ledger.json  chat.js  config.py  cornerstone.py  cornerstone_server.py  decision_ledger.py  demo_ledger_tampered.json  generate_evidence_package.py  governance_ledger.py  hws_governance_demo.py  hws_research_harvester_pro.py  index.html  index.js  integration_test.py  integration_test_v35.py  kernel_v34.py  kernel_v35.py  ledger_writer.py  main.py  package.json  posts.json  (+14 more)
.github/workflows/: ci.yml  codeql.yml  deploy.yml  test.yml
WOS-EVID-ART-001-20260707_205329/: EVIDENCE_METADATA.json  OPERATIONS_REPORT.json  README.md  REVIEWER_INSTRUCTIONS.md  VERIFICATION_HASHES.txt  integration_test_output.txt  main_all_output.txt
app/: main.py
app/templates/: base.html  index.html
constitution/: WOS-REG-1.3.json
data/: posts.json
docs/: API.md  ARCHITECTURE.md
examples/grok-governance-wrapper/: README.md  grok_proxy.py  requirements.txt
fastapi/: __init__.py  responses.py
hws-governed-core/: README.md  pyproject.toml
hws-governed-core/src/agents/: demo_agent.py
hws-governed-core/src/gateway/: main.py
hws-governed-core/src/governance/: kernel.py  schemas.py
hws-governed-core/src/identity/: auth.py
hws-governed-core/src/ledger/: ledger.py
hws-governed-core/tests/: test_governed_flow.py
pydantic/: __init__.py
schemas/: docanax.struct.v0.1.schema.json
site/: db.js  manifest.json  package.json  push.sh  server.js
site/app/: main.py
site/app/templates/: index.html
site/static/: index.html
tests/: conftest.py  integration_test_v35.py  test_rekor_anchor.py  test_whiteswan_governance_kernel.py
whiteswan/: __init__.py  api.py  decision_ledger.py  hws_research_harvester_pro.py  kernel_v34.py  kernel_v35.py  ledger_writer.py  rekor_anchor.py  verify_evidence.py  whiteswan_api_v35.py  whiteswan_governance_kernel_v3_4.py
