[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whiteswan-os"
version = "3.5.0"
description = "AI governance enforcement middleware with cryptographic audit trails and constitutional invariants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Holmes & Watson Supreme AI" },
]
keywords = [
  "ai-governance",
  "ai-safety",
  "compliance",
  "audit",
  "enforcement",
  "nist-ai-rmf",
  "eu-ai-act",
  "middleware",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System :: Systems Administration",
  "Typing :: Typed",
]

dependencies = [
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pynacl>=1.5.0",
  "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.25.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/jsellars88/H-W-supreme-Ai-"
Repository = "https://github.com/jsellars88/H-W-supreme-Ai-"
Documentation = "https://github.com/jsellars88/H-W-supreme-Ai-/tree/main/docs"
Issues = "https://github.com/jsellars88/H-W-supreme-Ai-/issues"

[tool.setuptools.packages.find]
include = ["whiteswan*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "integration_test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
